# fennec

./: .gitignore  BRANDING.md  CHANGELOG.md  CHANGELOG_v0.3.0.md  COMPLETE_EXAMPLE_SUMMARY.md  CONTRIBUTING.md  EXAMPLE_GUIDE.md  FENNEC_INTRO.md  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  GUI_CLIENT_GUIDE.md  GUI_SUMMARY.md  HOW_TO_PUBLISH.md  HOW_TO_RUN.md  IMPORT_CHANGES.md  LICENSE  MANIFEST.in  OPENAPI_FIX_SUMMARY.md  OPENAPI_GUIDE.md  PRODUCTION_READINESS.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  READY_TO_PUBLISH.txt  SECURITY_ASSESSMENT.md  SECURITY_IMPROVEMENTS.md  TEST_OPENAPI_FIX.md  V0.3.0_IMPLEMENTATION_SUMMARY.md  main.py  publish.sh  pyproject.toml  run_example.sh  run_with_gui.sh  setup.py  test_openapi.py
docs/: DEPLOYMENT_GUIDE_v0.3.0.md  v0.3.0_FEATURES.md
examples/: __init__.py
examples/admin_dashboard/: README.md  server.py
examples/caching_example/: README.md  server.py
examples/database_integration/: README.md  mongodb_example.py  postgresql_example.py
examples/deployment/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  prometheus.yml  requirements.txt
examples/deployment/kubernetes/: configmap.yaml  deployment.yaml  secrets.yaml
examples/graphql_api/: README.md  server.py
examples/grpc_service/: README.md  client.py  server.py  user.proto
examples/message_queue/: README.md  server.py
examples/microservices/: README.md  gateway.py  order_service.py  user_service.py
examples/migration_example/: README.md  server.py
examples/monitoring_setup/: README.md  grafana_dashboard.json  prometheus.yml  server.py
examples/oauth2_auth/: README.md  client_example.py  server.py
examples/simple_api/: README.md
examples/simple_crud/: README.md  client.html  server.py
examples/websocket_chat/: README.md  client.html  server.py
fennec/: __init__.py  app.py  background.py  config.py  dependencies.py  exceptions.py  middleware.py  openapi.py  request.py  routing.py  testing.py  validation.py  websocket.py
fennec/admin/: __init__.py  dashboard.py  metrics.py
fennec/cache/: __init__.py  decorators.py  redis.py  strategies.py
fennec/cli/: __init__.py  __main__.py  commands.py
fennec/db/: __init__.py  connection.py  repository.py
fennec/graphql/: __init__.py  engine.py  resolvers.py  schema.py
fennec/grpc/: __init__.py  client.py  decorators.py  server.py
fennec/migrations/: __init__.py  cli.py  manager.py  migration.py
fennec/monitoring/: __init__.py  health.py  logging.py  metrics.py  tracing.py
fennec/queue/: __init__.py  manager.py  worker.py
fennec/queue/backends/: rabbitmq.py  redis.py  (+1 more)
fennec/security/: __init__.py  auth.py  cors.py  csrf.py  headers.py  password.py  rate_limit.py  sanitize.py
logo/: .gitkeep  LOGO.txt  LOGO_DESIGN_PROMPT.md  README.md
tests/: __init__.py
(+3 files in other folders)
